--- a/.github/workflows/deploy-example-projects.yml
+++ b/.github/workflows/deploy-example-projects.yml
@@ -2,7 +2,7 @@ name: Deploy Example Projects
 
 on:
   workflow_run:
-    workflows: [ "Quality Control" ]
+    workflows: ['Quality Control']
     types: [completed]
     branches: [master]
 
