--- a/packages/ui-patterns-playground/package.json
+++ b/packages/ui-patterns-playground/package.json
@@ -4,9 +4,10 @@
   "version": "8.1.3",
   "type": "module",
   "dependencies": {
+    "@inovex.de/elements-react": "^8.1.3",
+    "@inovex.de/ui-patterns": "8.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@inovex.de/ui-patterns": "8.1.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -14,9 +15,12 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
