--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "8.1.3",
+  "packages": ["packages/*"],
+  "version": "9.0.0",
   "npmClient": "yarn",
   "useNx": true,
   "useWorkspaces": true,
@@ -11,9 +9,7 @@
       "yes": true,
       "push": false,
       "message": "chore: publish %s",
-      "allowBranch": [
-        "master"
-      ]
+      "allowBranch": ["master"]
     }
   }
 }
